libclamav/clamav.h

/**
 * @brief Return codes used by libclamav functions.
 */
typedef enum cl_error_t {
    /* libclamav specific */
    CL_CLEAN   = 0,
    CL_SUCCESS = 0,
    CL_VIRUS,
    CL_ENULLARG,
    CL_EARG,
    CL_EMALFDB,
    CL_ECVD,
    CL_EVERIFY,
    CL_EUNPACK,

    /* I/O and memory errors */
    CL_EOPEN,
    CL_ECREAT,
    CL_EUNLINK,
    CL_ESTAT,
    CL_EREAD,
    CL_ESEEK,
    CL_EWRITE,
    CL_EDUP,
    CL_EACCES,
    CL_ETMPFILE,
    CL_ETMPDIR,
    CL_EMAP,
    CL_EMEM,
    CL_ETIMEOUT,

    /* internal (not reported outside libclamav) */
    CL_BREAK,
    CL_EMAXREC,
    CL_EMAXSIZE,
    CL_EMAXFILES,
    CL_EFORMAT,
    CL_EPARSE,
    CL_EBYTECODE,          /** may be reported in testmode */
    CL_EBYTECODE_TESTFAIL, /** may be reported in testmode */
    CL_ELOCK,
    CL_EBUSY,
    CL_ESTATE,

    CL_VERIFIED, /** The scan target has been deemed trusted */
    CL_ERROR,    /** Unspecified / generic error */

    /* no error codes below this line please */
    CL_ELAST_ERROR
} cl_error_t;
/*** scan options ***/
struct cl_scan_options {
    uint32_t general;
    uint32_t parse;
    uint32_t heuristic;
    uint32_t mail;
    uint32_t dev;
};
// clang-format on

struct cl_engine;
/* ----------------------------------------------------------------------------
 * ClamAV File Map Abstraction Public API.
 */
struct cl_fmap;
/* ----------------------------------------------------------------------------
 * File scanning.
 */

/**
 * @brief Scan a file, given a file descriptor.
 *
 * @deprecated This function is deprecated and will be removed in a future release. Use `cl_scandesc_ex()` instead.
 *
 * @param desc            File descriptor of an open file. The caller must provide this or the map.
 * @param filename        (optional) Filepath of the open file descriptor or file map.
 * @param[out] virname    Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.
 * @param[out] scanned    The number of bytes scanned / CL_COUNT_PRECISION.
 * @param engine          The scanning engine.
 * @param scanoptions     Scanning options.
 * @return cl_error_t     CL_SUCCESS, CL_VIRUS, or an error code if an error occurred during the scan.
 */
extern cl_error_t cl_scandesc(
    int desc,
    const char *filename,
    const char **virname,
    unsigned long int *scanned,
    const struct cl_engine *engine,
    struct cl_scan_options *scanoptions);
/**
 * @brief Scan a file, given a file descriptor.
 *
 * @deprecated This function is deprecated and will be removed in a future release. Use `cl_scandesc_ex()` instead.
 *
 * This callback variant allows the caller to provide a context structure that
 * caller provided callback functions can interpret.
 *
 * @param desc            File descriptor of an open file. The caller must provide this or the map.
 * @param filename        (optional) Filepath of the open file descriptor or file map.
 * @param[out] virname    Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.
 * @param[out] scanned    The number of bytes scanned / CL_COUNT_PRECISION.
 * @param engine          The scanning engine.
 * @param scanoptions     Scanning options.
 * @param[in,out] context (Optional) An application-defined context struct, opaque to libclamav.
 *                        May be used within your callback functions.
 * @return cl_error_t     CL_SUCCESS, CL_VIRUS, or an error code if an error occurred during the scan.
 */
extern cl_error_t cl_scandesc_callback(
    int desc,
    const char *filename,
    const char **virname,
    unsigned long int *scanned,
    const struct cl_engine *engine,
    struct cl_scan_options *scanoptions,
    void *context);
/**
 * @brief Scan a file, given a filename.
 *
 * @deprecated This function is deprecated and will be removed in a future release. Use `cl_scanfile_ex()` instead.
 *
 * @param filename        Filepath of the file to be scanned.
 * @param[out] virname    Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.
 * @param[out] scanned    The number of bytes scanned / CL_COUNT_PRECISION.
 * @param engine          The scanning engine.
 * @param scanoptions     Scanning options.
 * @return cl_error_t     CL_SUCCESS, CL_VIRUS, or an error code if an error occurred during the scan.
 */
extern cl_error_t cl_scanfile(
    const char *filename,
    const char **virname,
    unsigned long int *scanned,
    const struct cl_engine *engine,
    struct cl_scan_options *scanoptions);
/**
 * @brief Scan a file, given a filename.
 *
 * @deprecated This function is deprecated and will be removed in a future release. Use `cl_scanfile_ex()` instead.
 *
 * This callback variant allows the caller to provide a context structure that
 * caller provided callback functions can interpret.
 *
 * @param filename        Filepath of the file to be scanned.
 * @param[out] virname    Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.
 * @param[out] scanned    The number of bytes scanned / CL_COUNT_PRECISION.
 * @param engine          The scanning engine.
 * @param scanoptions     Scanning options.
 * @param[in,out] context (Optional) An application-defined context struct, opaque to libclamav.
 *                        May be used within your callback functions.
 * @return cl_error_t     CL_SUCCESS, CL_VIRUS, or an error code if an error occurred during the scan.
 */
extern cl_error_t cl_scanfile_callback(
    const char *filename,
    const char **virname,
    unsigned long int *scanned,
    const struct cl_engine *engine,
    struct cl_scan_options *scanoptions,
    void *context);
/* ----------------------------------------------------------------------------
 * Database handling.
 */

/**
 * @brief Load the signature databases found at the path.
 *
 * @param path          May be a file or directory.
 * @param engine        The engine to load the signatures into
 * @param[out] signo    The number of signatures loaded
 * @param dboptions     Database load bitflag field. See the CL_DB_* defines, above.
 * @return cl_error_t
 */
extern cl_error_t cl_load(const char *path, struct cl_engine *engine, unsigned int *signo, unsigned int dboptions);
/**
 * @brief Get the default database directory path.
 *
 * @return const char*
 */
extern const char *cl_retdbdir(void);
/* ----------------------------------------------------------------------------
 * CVD / database functions
 */

struct cl_cvd {           /* field no. */
    char *time;           /* 2 */
    unsigned int version; /* 3 */
    unsigned int sigs;    /* 4 */
    unsigned int fl;      /* 5 */
                          /* padding */
    char *md5;            /* 6 */
    char *dsig;           /* 7 */
    char *builder;        /* 8 */
    unsigned int stime;   /* 9 */
};
/**
 * @brief Read the CVD header data from a file.
 *
 * The returned pointer must be free'd with cl_cvdfree().
 *
 * @param file              Filepath of CVD file.
 * @return struct cl_cvd*   Pointer to an allocated CVD header data structure.
 */
extern struct cl_cvd *cl_cvdhead(const char *file);
/**
 * @brief Parse the CVD header.
 *
 * Buffer length is not an argument, and the check must be done
 * by the caller cl_cvdhead().
 *
 * The returned pointer must be free'd with cl_cvdfree().
 *
 * @param head              Pointer to the header data buffer.
 * @return struct cl_cvd*   Pointer to an allocated CVD header data structure.
 */
extern struct cl_cvd *cl_cvdparse(const char *head);
/**
 * @brief Free a CVD header struct.
 *
 * @param cvd   Pointer to a CVD header struct.
 */
extern void cl_cvdfree(struct cl_cvd *cvd);
/* ----------------------------------------------------------------------------
 * Software versions.
 */

/**
 * @brief Get the Functionality Level (FLEVEL).
 *
 * @return unsigned int The FLEVEL.
 */
extern unsigned int cl_retflevel(void);
/**
 * @brief Get the ClamAV version string.
 *
 * E.g. clamav-0.100.0-beta
 *
 * @return const char* The version string.
 */
extern const char *cl_retver(void);
/* ----------------------------------------------------------------------------
 * Others.
 */
extern const char *cl_strerror(cl_error_t clerror);