clamav-sys/no-libclang/bindings.rs

#[doc = " @brief Function to get the machine's unique host ID.\n\n @param cbdata    The statistics data. Probably a pointer to a malloc'd struct."]
pub type clcb_stats_get_hostid = ::std::option::Option<
    unsafe extern "C" fn(cbdata: *mut ::std::os::raw::c_void) -> *mut ::std::os::raw::c_char,
>;
extern "C" {
    #[doc = " @brief Set a custom callback function to get the machine's unique host ID.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_stats_get_hostid(
        engine: *mut cl_engine,
        callback: clcb_stats_get_hostid,
    );
}
extern "C" {
    #[doc = " @brief Function enables the built-in statistics reporting feature.\n\n @param engine    The initialized scanning engine."]
    pub fn cl_engine_stats_enable(engine: *mut cl_engine);
}
extern "C" {
    #[doc = " @brief Scan a file, given a file descriptor.\n\n @param desc              File descriptor of an open file. The caller must provide this or the map.\n @param filename          (optional) Filepath of the open file descriptor or file map.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occurred during the scan."]
    pub fn cl_scandesc(
        desc: ::std::os::raw::c_int,
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Scan a file, given a file descriptor.\n\n This callback variant allows the caller to provide a context structure that caller provided callback functions can interpret.\n\n @param desc              File descriptor of an open file. The caller must provide this or the map.\n @param filename          (optional) Filepath of the open file descriptor or file map.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @param[in,out] context   An opaque context structure allowing the caller to record details about the sample being scanned.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occurred during the scan."]
    pub fn cl_scandesc_callback(
        desc: ::std::os::raw::c_int,
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Scan a file, given a filename.\n\n @param filename          Filepath of the file to be scanned.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occurred during the scan."]
    pub fn cl_scanfile(
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Scan a file, given a filename.\n\n This callback variant allows the caller to provide a context structure that caller provided callback functions can interpret.\n\n @param filename          Filepath of the file to be scanned.\n @param[out] virname      Will be set to a statically allocated (i.e. needs not be freed) signature name if the scan matches against a signature.\n @param[out] scanned      The number of bytes scanned.\n @param engine            The scanning engine.\n @param scanoptions       Scanning options.\n @param[in,out] context   An opaque context structure allowing the caller to record details about the sample being scanned.\n @return cl_error_t       CL_CLEAN, CL_VIRUS, or an error code if an error occurred during the scan."]
    pub fn cl_scanfile_callback(
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Load the signature databases found at the path.\n\n @param path          May be a file or directory.\n @param engine        The engine to load the signatures into\n @param[out] signo    The number of signatures loaded\n @param dboptions     Database load bitflag field. See the CL_DB_* defines, above.\n @return cl_error_t"]
    pub fn cl_load(
        path: *const ::std::os::raw::c_char,
        engine: *mut cl_engine,
        signo: *mut ::std::os::raw::c_uint,
        dboptions: ::std::os::raw::c_uint,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Get the default database directory path.\n\n @return const char*"]
    pub fn cl_retdbdir() -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_cvd {
    pub time: *mut ::std::os::raw::c_char,
    pub version: ::std::os::raw::c_uint,
    pub sigs: ::std::os::raw::c_uint,
    pub fl: ::std::os::raw::c_uint,
    pub md5: *mut ::std::os::raw::c_char,
    pub dsig: *mut ::std::os::raw::c_char,
    pub builder: *mut ::std::os::raw::c_char,
    pub stime: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_cl_cvd() {
    const UNINIT: ::std::mem::MaybeUninit<cl_cvd> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cl_cvd>(),
        56usize,
        concat!("Size of: ", stringify!(cl_cvd))
    );
    assert_eq!(
        ::std::mem::align_of::<cl_cvd>(),
        8usize,
        concat!("Alignment of ", stringify!(cl_cvd))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).time) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(time)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).version) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sigs) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(sigs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fl) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(fl)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).md5) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(md5)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dsig) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(dsig)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).builder) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(builder)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stime) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cl_cvd),
            "::",
            stringify!(stime)
        )
    );
}
extern "C" {
    #[doc = " @brief Parse the CVD header.\n\n Buffer length is not an argument, and the check must be done\n by the caller cl_cvdhead().\n\n The returned pointer must be free'd with cl_cvdfree().\n\n @param head              Pointer to the header data buffer.\n @return struct cl_cvd*   Pointer to an allocated CVD header data structure."]
    pub fn cl_cvdparse(head: *const ::std::os::raw::c_char) -> *mut cl_cvd;
}
extern "C" {
    #[doc = " @brief Free a CVD header struct.\n\n @param cvd   Pointer to a CVD header struct."]
    pub fn cl_cvdfree(cvd: *mut cl_cvd);
}
extern "C" {
    #[doc = " @brief Get the Functionality Level (FLEVEL).\n\n @return unsigned int The FLEVEL."]
    pub fn cl_retflevel() -> ::std::os::raw::c_uint;
}
extern "C" {
    #[doc = " @brief Get the ClamAV version string.\n\n E.g. clamav-0.100.0-beta\n\n @return const char* The version string."]
    pub fn cl_retver() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn cl_strerror(clerror: cl_error_t) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cl_fmap {
    _unused: [u8; 0],
}
